# spacegame

./: CMakeLists.txt  Controls.cpp  Controls.h  GlWindow.cpp  GlWindow.h  GlobalFlags.h  main.cpp  vcpkg.json
game/: BasicGameEngine.cpp  BasicGameEngine.h  FreeFlyGameEngine.cpp  FreeFlyGameEngine.h  GameState.h  IGameEngine.h  MainGameEngine.cpp  MainGameEngine.h
game/collision/: AbstractCollider.cpp  AbstractCollider.h  BoxCollider.cpp  BoxCollider.h  GameMesh.cpp  GameMesh.h  MeshCollider.cpp  MeshCollider.h  TriangleCollider.cpp  TriangleCollider.h
game/engine/: BasicGameEngine.cpp  BasicGameEngine.h  FreeFlyGameEngine.cpp  FreeFlyGameEngine.h  MainGameEngine.cpp  MainGameEngine.h
game/engine/helper/: PhysicsSimulator.cpp  PhysicsSimulator.h
game/state/: GameState.h  PerlinNoise.cpp  PerlinNoise.h
render/: Camera.cpp  Camera.h  Environment.cpp  Environment.h  GameRenderer.cpp  GameRenderer.h  GlBuffer.cpp  GlBuffer.h  GlFramebuffer.cpp  GlFramebuffer.h  GlScreenBuffer.cpp  GlScreenBuffer.h  StateRenderCache.cpp  StateRenderCache.h
render/model/: Cubemap.cpp  Cubemap.h  Heightmap.cpp  Heightmap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Mesh2D.cpp  Mesh2D.h  Model.cpp  Model.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h
render/shader/: IPerlinRenderer.h  Shader2D.cpp  Shader2D.h  Shader3D.cpp  Shader3D.h  ShaderEnv.cpp  ShaderEnv.h  ShaderPerlin.cpp  ShaderPerlin.h  ShaderPlanet.cpp  ShaderPlanet.h  ShaderProgram.cpp  ShaderProgram.h  UniformBlock.cpp  UniformBlock.h  UniformBlockCache.cpp  UniformBlockCache.h
res/models/: blue_orb.mtl  character.mtl  orb.mtl  spaceship.mtl  wuhu.mtl
res/shaders/: f2D.glsl  f3D.glsl  fAtmosphere3D.glsl  fEmptySpace.glsl  fHeightmap.glsl  fPerlin.glsl  fPlanet3D.glsl  fSkybox3D.glsl  v2D.glsl  v3D.glsl  vHeightmap.glsl  vPerlin.glsl
res/shaders/shared/: f2D_header.glsl  f3D_header.glsl  fPhong.glsl  perlin.glsl  planetHelper.glsl  planetUB.glsl  v3D_header.glsl
screens/: IScreen.h  ResourceCache.cpp  ResourceCache.h  ScreenManager.cpp  ScreenManager.h  TestScreen.cpp  TestScreen.h
util/: ResourceReader.cpp  ResourceReader.h
